--- a/myapp/src/whatsappproject/index.css
+++ b/myapp/src/whatsappproject/index.css
@@ -8,7 +8,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(lightgreen 0%, lightgreen 130px, white 130px, white 100%);
+    /* background: linear-gradient(lightgreen 0%, lightgreen 130px, white 130px, white 100%); */
 }
 .container{
     position: relative;
